syntax = "proto3";

package proto.greeter.v1;

option go_package = "github.com/birros/go-libp2p-grpc/examples/echo/gen/greeter/v1;greeterv1";

service GreeterService {
  rpc SayHello(SayHelloRequest) returns (SayHelloResponse) {}
}

message SayHelloRequest {
  string name = 1;
}

message SayHelloResponse {
  string message = 1;
}
